# tagny-mcp-server

./: .bumpversion.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.py  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md
.github/workflows/: build.yml  publish.yml  publish2docker.yml  publish2pypi.yml
scripts/: client.py
src/tagny_mcp_server/: __init__.py  __main__.py  __version__.py  config.py
src/tagny_mcp_server/web_access/: __init__.py  url_text_fetcher.py  web_search.py
tests/: test_brave_wrapper.py  test_url_text_fetcher_tools.py  test_web_access_tools.py
tests/scripts/: client.py
web_access/: url_text_fetcher.py
